--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,6 +37,10 @@
           <% end %>
           <%= f.text_area :bio, :class => "form-control", :rows => "5" %>
         </div>
+        <div class="field">
+          <%= f.label :link_to_bio, "Link to Bio" %><br />
+          <%= f.text_area :link_to_bio, :class => "form-control" %>
+        </div>
         <br>
         <div class="actions">
           <%= f.submit "Change", :class => "btn btn-primary" %>
