--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -27,3 +27,12 @@
 		text-align:left;
 	}
 }
+
+.user-info {
+	display: inline-block;
+	text-align: center;
+}
+.user-info ul{
+	text-decoration: none;
+	list-style:none;
+}
