changes user and talk flash message wording

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -30,9 +30,9 @@
 
 .user-info {
 	display: inline-block;
-	text-align: center;
+	
 }
 .user-info ul{
-	text-decoration: none;
 	list-style:none;
+	text-align:left;
 }
