--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -126,3 +126,16 @@ hr.hr-medium {
 
 }
 
+// .btn-edit, .btn-delete {
+// 	width: 10px;
+// 	height: 20px;
+
+// }
+
+// .fa-trash-o:before{
+// 	color: red;
+// }
+
+// .fa-pencil-square-o:before{
+// 	color: blue;
+// }
