--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -248,6 +248,15 @@ footer {
   }
  }
 
+.ft-box {
+  overflow:hidden;
+
+}
+.thumbnail.featured-workshop {
+    width: 100%;
+    height: 100%;
+    padding: 3%;
+}
 
  .thumbnail>img, .thumbnail a>img {
     height: 210px;
@@ -600,3 +609,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, 
 .fa-envelope-o:before, .fa-map-marker:before, .fa-mobile-phone:before {
   color: #3f4652;
 }
+
+
+#one-true { overflow: hidden; }
+#one-true .col {
+  width: 27%;
+  padding: 30px 3.15% 0;
+  float: left;
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
+}
+#one-true .col:nth-child(1) { margin-left: 33.3%; background: #ccc; }
+#one-true .col:nth-child(2) { margin-left: -66.3%; background: #eee; }
+#one-true .col:nth-child(3) { left: 0; background: #eee; }
+#one-true p { margin-bottom: 30px; } /* Bottom padding on col is busy */
