edits form text

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -38,7 +38,7 @@
           <%= f.text_area :bio, :class => "form-control", :rows => "4" %>
         </div>
         <div class="field">
-          <%= f.label :link_to_bio, "Link to Bio (inser hyperlink)" %><br />
+          <%= f.label :link_to_bio, "Link to Bio (insert hyperlink)" %><br />
           <%= f.text_field :link_to_bio, :class => "form-control", :placeholder => "e.g. www.google.com" %>
         </div>
         <br>
