--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -43,7 +43,7 @@
       Price
     <% end %>
     <br />
-    <%= f.text_area :price, :class => "form-control" %>
+    <%= f.text_field :price, :class => "form-control" %>
   </div>
   <div class="field">
     <%= f.label :image do %>
