--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="jumbotron">
 			<h1>Inspire Your Team</h1>
 			<h2>Book a game-changing onsite speaker for your organization</h2>
-			<a class="btn btn-primary btn-lg" id="btn-signup" href="/workshops">SEARCH TALKS</a>
+			<a class="btn btn-primary btn-lg" id="btn-signup" href="/workshops">SEE ALL TALKS</a>
 		</div>
 	</section>
 	
