--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,7 +17,7 @@
         <%= f.password_field :password_confirmation, autocomplete: "off", :class => "form-control" %>
       </div>
       <div class="actions">
-        <%= f.submit "Change My Password" %>
+        <%= f.submit "Change My Password", :class => "btn btn-primary" %>
       </div>
       <% end %>
       <%= render "devise/shared/links" %>
