update about text

--- a/app/views/sites/about.html.erb
+++ b/app/views/sites/about.html.erb
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-8 col-md-offset-2">
 			<h1 class="text-center">About Big Talker</h1>
-			<p>Big Talker is a trusted marketplace for onsite guest speakers, seminars and workshops. Find your team's next training session or team building exercise..   Check community generated reviews and ratings to find the next game-changing training for your team.</p>
+			<p>Big Talker is a trusted marketplace for onsite guest speakers, seminars and workshops. Find your team's next training session or team building exercise.  Check community generated reviews and ratings to find the next inspirational training for your team.</p>
 			<p>Interested in posting a talk or finding a talk that's not listed? Contact us at <a href="mailto:hello.bigtalker@gmail.com?Subject=Hello" target="_top">hello.bigtalker@gmail.com</a></p>
 			<p>Big Talker is currently in Beta.</p>
 			<div class="text-center">
