--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -107,6 +107,7 @@
     <li class="footer-nav"><%= link_to "About Big Talker", about_path %></li>
     <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
     <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
+    <li class="footer-nav"><a href ="http://www.twitter.com/bigtalker_io" target="_blank"><%= fa_icon "twitter 2x" %></a></li>
   </footer>
   <!-- rails js files -->
   <%= javascript_include_tag 'application' %>
