--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -8,7 +8,7 @@
 				<span class="h4-big">Topic: <%= @workshop.topic.name.titleize %></span><br class="br-big">
 				<strong>Speaker:</strong> <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %><br>
 				<strong>Duration:</strong> <%= @workshop.duration %><br>
-				<strong>Format:</strong> <%= @workshop.format %><br>
+				<strong>Format:</strong> <%= @workshop.format.name.titleize %><br>
 				<strong>Expected Outcomes:</strong> <%= @workshop.expected_outcomes %><br>
 				<strong>Price:</strong> $ <%= @workshop.price %>
 				</h4>
