--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -7,7 +7,7 @@
 				<h4>
 				<span class="h4-big">Topic: <%= @workshop.topic.name.titleize if @workshop.topic %></span><br class="br-big">
 				<strong>Speaker:</strong> <%= link_to @workshop.user.full_name.titleize, user_path(@workshop.user), class: "speaker-name-link" %><br>
-				<strong>Duration:</strong> <%= @workshop.duration %><br>
+				<strong>Duration:</strong> <%= @workshop.duration.name.titleize if @workshop.duration %><br>
 				<strong>Format:</strong> <%= @workshop.format.name.titleize if @workshop.format %><br>
 				<strong>Expected Outcomes:</strong> <%= @workshop.expected_outcomes %><br>
 				<strong>Price:</strong> <%= @workshop.price.name.titleize if @workshop.price %><br>
