--- a/app/views/workshops/show.html.erb
+++ b/app/views/workshops/show.html.erb
@@ -10,7 +10,7 @@
 				<strong>Duration:</strong> <%= @workshop.duration.name.titleize if @workshop.duration %><br>
 				<strong>Format:</strong> <%= @workshop.format.name.titleize if @workshop.format %><br>
 				<strong>Expected Outcomes:</strong> <%= @workshop.expected_outcomes %><br>
-				<strong>Price:</strong> <%= @workshop.price.name.titleize if @workshop.price %><br>
+				<strong>Price:</strong> <%= number_to_currency(@workshop.price, precision: 0) %><br>
 				</h4>
 				<% if current_user == @workshop.user %>
 				<%= link_to edit_workshop_path(@workshop), class: "btn btn-primary btn-edit" do %>
