--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="margin-top: 20px">
 	<div class="row">
 		<div class="col-md-6 col-md-offset-3 well">
 			<h2>Resend confirmation instructions</h2>
