--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
   <div class="alert alert-danger">Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
 <% end %>
-<div class="container">
+<div class="container" style="margin-top: 20px">
 
   <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
