add workshop validation back, make create and edit button, add require field attention

--- a/app/assets/stylesheets/workshops.scss
+++ b/app/assets/stylesheets/workshops.scss
@@ -125,6 +125,15 @@ hr.hr-medium {
 	}
 
 }
+.required-label {
+	color: #d04108;
+}
+
+.new_workshop, .edit_workshop {
+	label {
+		color: #656565;
+	}
+}
 
 // .btn-edit, .btn-delete {
 // 	width: 10px;
