--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise. Check community generated reviews and ratings to find the next career-enhancing talk for your team.">
+    <meta name="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
     <meta property="og:image" content="http://i.imgur.com/yK5tMXm.jpg"/>
-    <meta property="og:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise. Check community generated reviews and ratings to find the next career-enhancing talk for your team." />
+    <meta property="og:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops." />
     <!-- Twitter Card -->
     <meta name="twitter:title" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers.">
-    <meta name="twitter:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise. Check community generated reviews and ratings to find the next career-enhancing talk for your team.">
+    <meta name="twitter:description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops.">
     <meta name="twitter:image" content="http://i.imgur.com/yK5tMXm.jpg">
     <!-- Google+ -->
     <meta itemprop="name" content="Big Talker - A marketplace for onsite workshops, seminars, and guest speakers.">
-    <meta itemprop="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise. Check community generated reviews and ratings to find the next career-enhancing talk for your team.">
+    <meta itemprop="description" content="Big Talker is a trusted marketplace for onsite guest speakers and workshops. Find your team's next inspiring guest speaker or team building exercise.">
     <meta itemprop="image" content="http://i.imgur.com/yK5tMXm.jpg">
 
     <%= favicon_link_tag asset_path('favicon.ico'), type:'image/png' %>
-    <title>Big Talker - A marketplace for onsite workshops, seminars, and guest speakers.</title>
+    <title>BigTalker. Find onsite workshops, seminars and speakers</title>
     <%= render 'favicon' %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%= csrf_meta_tags %>
