adds alt tags to images and icons

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -19,7 +19,7 @@
 					<div class="thumbnail featured-workshop">
 						<%= image_tag workshop.image.url(:medium), class: "img-responsive workshop-img vertical-align" %>
 						<div class="featured-workshop-title-wrapper">
-							<h3><strong><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></strong></h3>
+							<h1 style="font-weight:bold; font-size: 28px"><%= link_to workshop.title.titleize, workshop_path(workshop), class: "workshop-title-link" %></h1>
 						</div>
 							<h4>
 							Topic: <%= workshop.topic.name.titleize if workshop.topic %>
@@ -41,7 +41,6 @@
 		</div>
 	</div><hr>
 	<!-- End Featured Workshops -->
-
 	<div class="contact-container">
 		<div class="text-center">
 			<%= link_to "Contact Us", contact_path, class:"btn btn-primary", id: "btn-contact" %>
