add back bio validations and add bigtalker to subject line of new message mailer

--- a/app/views/mailboxer/message_mailer/new_message_email.html.erb
+++ b/app/views/mailboxer/message_mailer/new_message_email.html.erb
@@ -8,7 +8,7 @@
       Sender: <%= raw @message.sender.full_name.titleize %>
     </p>
     <p>
-      Subject: <%= raw @message.subject %>
+      Subject: <%= raw @message.subject %> via BigTalker
     </p>
     <p>Message:</p>
     <p>
