swapping in code from sams seo rails branch

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -3,17 +3,17 @@
 		<h1>CONTACT US</h1>
 		<h3>Questions? Comments? We would love to hear from you.</h3>
 		<div class="col-md-4 icons">
-			<%= fa_icon "envelope-o 3x", :html => { :style =>  'color:red' } %>
+			<%= fa_icon "envelope-o 3x", :alt => 'email icon' %>
 			<h4>EMAIL</h4>
 			<%= mail_to "hello.bigtalker@gmail.com" %>
 		</div>
 		<div class="col-md-4 icons">
-			<%= fa_icon "map-marker 3x" %>
+			<%= fa_icon "map-marker 3x", :alt => 'map marketer icon' %>
 			<h4>LOCATION</h4>
 			<p>San Francisco, CA</p>
 		</div>
 		<div class="col-md-4 icons">
-			<%= fa_icon "mobile 3x" %>
+			<%= fa_icon "mobile 3x", :alt => 'mobile icon' %>
 			<h4>PHONE</h4>
 			<p>650-283-3318</p>
 		</div>
