removing price requirement from workshop

--- a/app/views/workshops/_workshop_form.html.erb
+++ b/app/views/workshops/_workshop_form.html.erb
@@ -40,7 +40,7 @@
   </div>
   <div class="field">
     <%= f.label :price do %>
-      Price<span class="required-label">*</span>
+      Price<span class="required-label"></span>
     <% end %>
     <br>
     <%= f.text_field :price, :class => "form-control" %>
