--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -5,7 +5,7 @@
 		<div class="col-md-4 icons">
 			<%= fa_icon "envelope-o 3x", :html => { :style =>  'color:red' } %>
 			<h4>EMAIL</h4>
-			<%= mail_to "hello.bigtalker@gmail.com" %>
+			<%= mail_to "info@bigtalker.io" %>
 		</div>
 		<div class="col-md-4 icons">
 			<%= fa_icon "map-marker 3x" %>
