--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,7 +110,7 @@
   <footer class="text-center">
     <li class="footer-nav"><%= link_to "About Big Talker", about_path %></li>
     <li class="footer-nav"><a href ="/">Copyright 2016</a></li>
-    <li class="footer-nav"><a href ="https://blog.bigtalker.io/">Blog</a></li>
+    <li class="footer-nav"><a href ="/">Terms and Conditions</a></li>
     <li class="footer-nav"><a href ="http://www.twitter.com/bigtalker_io" target="_blank"><%= fa_icon "twitter 2x" %></a></li>
   </footer>
   <!-- rails js files -->
