--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,8 +38,8 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a class="dropdown-toggle <%= params[:controller] == "users" and params[:action] == "show" and current_user.slug == params[:id] ? 'btn btn-default' : '' %>" data-toggle="dropdown" href="#">About<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to "About", about_path, class: "#{params[:action] == 'about' ? 'btn btn-default' : ''}" %></li>
-              <li><%= link_to "Contact", contact_path, class: "#{params[:action] == 'contact' ? 'btn btn-default' : ''}" %></li>
+              <li><%= link_to "About", about_path %></li>
+              <li><%= link_to "Contact", contact_path %></li>
               <li><a href="https://blog.bigtalker.io/">Blog</a></li>
             </ul>
             <li><%= link_to "Talks", workshops_path, class: "#{params[:controller] == "workshops" and params[:action] == "index" ? 'btn btn-default' : ''}" %></li>
