--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,6 +40,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "About", about_path %></li>
               <li><%= link_to "Contact", contact_path %></li>
+              <li><%= link_to "Request a Speaker", contact_path %></li>
               <li><a href="https://blog.bigtalker.io/">Blog</a></li>
             </ul>
             <li><%= link_to "Talks", workshops_path, class: "#{params[:controller] == "workshops" and params[:action] == "index" ? 'btn btn-default' : ''}" %></li>
