--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a class="dropdown-toggle <%= params[:controller] == "users" and params[:action] == "show" and current_user.slug == params[:id] ? 'btn btn-default' : '' %>" data-toggle="dropdown" href="#">About<span class="caret"></span></a>
+            <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">About<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "About", about_path %></li>
               <li><%= link_to "Contact", contact_path %></li>
