adds request speaker params to model as attr_accessor to send info

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -50,13 +50,13 @@
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label 'company' %><br>
-						    <%= f.text_field :content, class: "form-control" %>
+						    <%= f.text_field :company, class: "form-control" %>
 						  </div>
 						</div>
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label 'location' %><br>
-						    <%= f.text_field :content, class: "form-control" %>
+						    <%= f.text_field :location, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
@@ -64,13 +64,13 @@
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label 'number of participants' %><br>
-						    <%= f.number_field :content, class: "form-control" %>
+						    <%= f.number_field :number_participants, class: "form-control" %>
 						  </div>
 						</div>
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label 'potential date' %><br>
-						    <%= f.date_field :content, class: "form-control" %>
+						    <%= f.date_field :date, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
@@ -78,7 +78,7 @@
 						<div class="col-xs-12">
 							<div class="field form-group">
 						    <%= f.label 'budget' %><br>
-						    <%= f.number_field :content, class: "form-control" %>
+						    <%= f.number_field :budget, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
@@ -86,7 +86,7 @@
 						<div class="col-xs-12">
 						 	<div class="field form-group">
 						    <%= f.label 'who is the audience?' %><br>
-						    <%= f.text_field :content, class: "form-control" %>
+						    <%= f.text_field :audience, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 						<div class="col-xs-12">
 						 	<div class="field form-group">
 						    <%= f.label 'goal of requested talk' %><br>
-						    <%= f.text_field :content, class: "form-control" %>
+						    <%= f.text_field :goal, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
