adds additional fields to contact form to request speaker

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -49,13 +49,13 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="field form-group">
-						    <%= f.label 'company' %><br>
+						    <%= f.label :company %><br>
 						    <%= f.text_field :company, class: "form-control" %>
 						  </div>
 						</div>
 						<div class="col-sm-6">
 							<div class="field form-group">
-						    <%= f.label 'location' %><br>
+						    <%= f.label :location %><br>
 						    <%= f.text_field :location, class: "form-control" %>
 						  </div>
 						</div>
@@ -77,7 +77,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<div class="field form-group">
-						    <%= f.label 'budget' %><br>
+						    <%= f.label :budget %><br>
 						    <%= f.number_field :budget, class: "form-control" %>
 						  </div>
 						</div>
