--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -63,7 +63,7 @@
 						<div class="col-sm-6">
 							<div class="field form-group">
 						    <%= f.label 'number of participants' %><br>
-						    <%= f.number_field :number_participants, class: "form-control" %>
+						    <%= f.text_field :number_participants, class: "form-control" %>
 						  </div>
 						</div>
 						<div class="col-sm-6">
@@ -77,7 +77,7 @@
 						<div class="col-xs-12">
 							<div class="field form-group">
 						    <%= f.label :budget %><br>
-						    <%= f.number_field :budget, class: "form-control" %>
+						    <%= f.text_field :budget, class: "form-control" %>
 						  </div>
 						</div>
 					</div>
