matches speaker requirements font size

--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -97,7 +97,7 @@
 						<div class="col-xs-12">
 							<div class="field form-group">
 						    <%= f.label 'Speaker requirements' %><span class="required-label">*</span><br>
-						    <%= f.text_area :content, rows: "7", required: true, class: "form-control" %>
+						    <%= f.text_area :content, rows: "7", required: true, class: "form-control", style: 'font-size:18px' %>
 						  </div>
 						  <p><span class="required-label">*</span> required field</p>
 						  <div class="actions form-group text-center">
