--- a/app/views/sites/contact.html.erb
+++ b/app/views/sites/contact.html.erb
@@ -21,7 +21,7 @@
 
 	<div class="row contact-form-wrap zero-margin">
 		<div class="col-md-6 col-md-offset-3">
-			<h3 class="text-center" style="color:#fff">Request for speaker</h3>
+			<h3 class="text-center" style="color:#fff">Contact form / Request for speaker</h3>
 				<%= form_for @message, :html => { :style =>  'color:#fff' } do |f| %>
 					<div class="row">
 						<div class="col-sm-6">
@@ -96,7 +96,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<div class="field form-group">
-						    <%= f.label 'Speaker requirements' %><span class="required-label">*</span><br>
+						    <%= f.label 'Message or speaker requirements' %><span class="required-label">*</span><br>
 						    <%= f.text_area :content, rows: "7", required: true, class: "form-control", style: 'font-size:18px' %>
 						  </div>
 						  <p><span class="required-label">*</span> required field</p>
