--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -15,7 +15,7 @@
         <br>
         <div class="field">
           <%= f.label :full_name, "Full Name" %><br />
-          <%= f.text_field :full_name, autofocus: true, :class => "form-control" %>
+          <%= f.text_field :full_name, :class => "form-control" %>
         </div>
         <div class="field">
           <%= f.label :email %><br />
@@ -24,11 +24,11 @@
         </div>
         <div class="field">
           <%= f.label :organization %><br />
-          <%= f.text_field :organization, :class => "form-control" %>
+          <%= f.text_field :organization, :class => "form-control  #{!@user.organization ? 'missing' : ''}" %>
         </div>
         <div class="field">
           <%= f.label :location %><br />
-          <%= f.text_field :location, :class => "form-control location-input" %>
+          <%= f.text_field :location, :class => "form-control location-input #{!@user.location ? 'missing' : ''}" %>
         </div>
         <div class="field">
           <%= f.label :bio, "Bio (40-1000 characters)" %><br />
